# ibus-table

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  _config.yml  configure.ac  development.html  documentation.html  ibus-table.appdata.xml  ibus-table.spec.in  index.html  mypy.sh  org.freedesktop.ibus.engine.table.gschema.xml  org.freedesktop.ibus.engine.table.metainfo.xml.in  params.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
_layouts/: default.html
_posts/: 2016-08-24-ibus-table-1.9.14-released.md
data/: Makefile.am  phrase.txt.bz2
debian/: copyright
engine/: .gitignore  Makefile.am  chinese_variants.py  factory.py  ibus-engine-table.in  ibus-table-createdb.sgml  ibus_table_location.py  it_active_window.py  it_sound.py  it_util.py  main.py  pylintrc  tabcreatedb.py  tabdict.py  table.py  table.xml.in.in  tabsqlitedb.py  version.py.in
icons/: Makefile.am
its/: Makefile.am  ibus-table.its  ibus-table.loc
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  de.po  el.po  es.po  fa.po  fr.po  hu.po  ibus-table.pot  ja.po  ka.po  kab.po  ko.po  lo.po  pt_BR.po  pt_PT.po  ro.po  ru.po  si.po  tr.po  uk.po  zanata.xml  zh_CN.po  zh_HK.po  zh_TW.po
setup/: .gitignore  Makefile.am  i18n.py  ibus-setup-table.desktop.in.in  ibus-setup-table.in  ibus-table-preferences.ui  main.py  pylintrc  version.py.in
tests/: .gitignore  Makefile.am  gtkcases.py  mock_engine.py  pylintrc  run_tests.in  test_0_gtk.py  test_it.py
tools/: Unihan_Variants.txt  generate-chinese-variants.py  ibus-table-query
