# vim:set noet ts=4
#
# ibus-table - The Tables engine for IBus
#
# Copyright (c) 2008-2009 Yu Yuwei <acevery@gmail.com>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#

SUBDIRS = \
	$(NULL)

icons_DATA = \
	ibus-table.svg \
	full-letter.svg \
	half-letter.svg \
	full-punct.svg \
	half-punct.svg \
	tab-mode.svg \
	py-mode.svg \
	onechar.svg \
	phrase.svg \
	chinese.svg \
	english.svg \
	acommit.svg \
	ncommit.svg \
	cb-mode.svg \
	sc-mode.svg \
	tc-mode.svg \
	scb-mode.svg \
	tcb-mode.svg \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

hicolor_icon_scalable_DATA = ibus-table.svg
hicolor_icon_scalabledir = $(datadir)/icons/hicolor/scalable/apps

hicolor_icon_16_DATA = 16x16/ibus-table.png
hicolor_icon_16dir = $(datadir)/icons/hicolor/16x16/apps

hicolor_icon_22_DATA = 22x22/ibus-table.png
hicolor_icon_22dir = $(datadir)/icons/hicolor/22x22/apps

hicolor_icon_32_DATA = 32x32/ibus-table.png
hicolor_icon_32dir = $(datadir)/icons/hicolor/32x32/apps

hicolor_icon_48_DATA = 48x48/ibus-table.png
hicolor_icon_48dir = $(datadir)/icons/hicolor/48x48/apps

hicolor_icon_64_DATA = 64x64/ibus-table.png
hicolor_icon_64dir = $(datadir)/icons/hicolor/64x64/apps

hicolor_icon_128_DATA = 128x128/ibus-table.png
hicolor_icon_128dir = $(datadir)/icons/hicolor/128x128/apps

hicolor_icon_256_DATA = 256x256/ibus-table.png
hicolor_icon_256dir = $(datadir)/icons/hicolor/256x256/apps

EXTRA_DIST = \
	$(icons_DATA) \
	$(hicolor_icon_16_DATA) \
	$(hicolor_icon_22_DATA) \
	$(hicolor_icon_32_DATA) \
	$(hicolor_icon_48_DATA) \
	$(hicolor_icon_64_DATA) \
	$(hicolor_icon_128_DATA) \
	$(hicolor_icon_256_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

